# mona-lisa-tools

./: .gitignore  README.md
code/c/lib/list/: CMakeLists.txt
code/c/lib/list/cmake/: FindCUnit.cmake
code/c/lib/list/include/: list.h
code/c/lib/list/src/: apply_callback.c  at.c  clear.c  delete.c  find_node.c  insert.c  new.c  pop_back.c  pop_front.c  push_back.c  push_front.c  remove.c
code/c/lib/list/test/include/: test_list.h
code/c/lib/list/test/src/: apply_callback.c  at.c  back.c  clear.c  delete.c  find_node.c  front.c  insert.c  is_empty.c  main.c  new.c  pop_back.c  pop_front.c  push_back.c  push_front.c  remove.c  size.c
docs/: usage.md
